в todo есть что сделал

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 Работа с базой данных:
  + Регистрация пользователя в базе данных, ежи раньше он не писал
- - Запись количество полученных раз во временную таблицу
- - Получение количество подходов, проверка ПРОМЕЖУТОЧНОЙ ТАБЛИЦЫ (ПТ) на наличие количества раз, 
+ + Запись количество полученных раз в ПРОМЕЖУТОЧНУЮ ТАБЛИЦУ (ПТ)
+ - Получение количество подходов, проверка ПТ на наличие количества раз, 
  ежи нет выкидываем сообщение, с просьбой ввести количество раз ещё раз, иначе .pop() из ПТ кол-во раз и вместе с полученным кол-вом подходов в основную таблицу
  если за сегодня человек вводил данные, значит прибавляем к текущему результату новый
 
